@@ -1,5 +1,7 @@
 2010-03-26  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
 
+	* src/dlvhex/postpross.sh: Adding post-processing script for call-graph output and answer set.
+
 	* include/dlvhex/MLPSolver.hpp: Fixed some printing information for post-processing.
 
 2010-03-25  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
